Fix navbar-collapse
 - Add bootstrap js
 - Update less css
 - Update main menu directive controller to close collapse menu on item click

--- a/clients/admin/dev/assets/css/main.css
+++ b/clients/admin/dev/assets/css/main.css
@@ -185,6 +185,11 @@ nav.navbar .navbar-brand:hover {
 nav.navbar .navbar-nav > li > a {
   color: white;
 }
+.navbar-collapse {
+  position: relative;
+  z-index: 999;
+  background: #595959;
+}
 /*
  * Dashboard Styling 
  */
